--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "@monaco-editor/react": "^4.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
