--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,11 +21,11 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-services": "^0.1.2",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "@monaco-editor/react": "^4.4.6"
+    "socket.io-client": "^4.8.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/socket.io-client": "^1.4.36",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
