added redirection if invalid room id is entered and updated docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - user-service
       - question-service
       - matching-service
+      - collaboration-service
       - rabbitmq
 
   user-service:
