Modified docker compose for frontend to depend on chat service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - question-service
       - matching-service
       - collaboration-service
+      - chat-service
       - rabbitmq
 
   user-service:
